@@ -22,8 +22,10 @@
  */
 function smarty_modifier_replace($string, $search, $replace)
 {
-    require_once(SMARTY_PLUGINS_DIR . 'shared.mb_str_replace.php');
-    return smarty_mb_str_replace($search, $replace, $string);
+    if (function_exists('mb_split')) {
+    	require_once(SMARTY_PLUGINS_DIR . 'shared.mb_str_replace.php');
+    	return smarty_mb_str_replace($search, $replace, $string);
+    }
+    return str_replace($search, $replace, $string);
 } 
-
 ?>
